# privacy-protocols

./: .gitignore  11155111_ETH_10_nullifiers.ndjson  11155111_ETH_1_deposits.ndjson  11155111_ETH_1_nullifiers.ndjson  CLAUDE.md  Cargo.toml  README.md  TODO  flake.nix  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci-js.yaml  ci-railgun-js.yaml  ci-railgun-rust.yaml  ci-rust.yaml  ci-tc-js.yaml  ci-tc-rust.yaml  ci.yaml  publish.yaml  sync-tc-state.yaml  test-rs.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: babyjubjub.rs  pedersen.rs
crates/eth-rpc/: Cargo.toml
crates/eth-rpc/src/: alloy_impl.rs  client.rs  lib.rs  wasm_impl.rs
crates/poseidon-rust/: Cargo.toml
crates/poseidon-rust/benches/: poseidon_hash.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  proof.rs  prover.rs  wasm_impl.rs
crates/railgun-rs/: Cargo.toml  dominators.txt  dominators2.txt  justfile  top.txt
crates/railgun-rs/src/: caip.rs
crates/request/: Cargo.toml
crates/request/src/: client.rs
crates/tc-rs/: Cargo.toml  justfile
crates/tc-rs/src/: lib.rs  tx_data.rs
crates/tc-syncer/src/: main.rs
crypto/: Cargo.toml
crypto/benches/: pedersen.rs
crypto/src/: lib.rs
crypto/src/merkle_tree/: merkle_proof.rs  merkle_tree.rs
docs/: waku.md
railgun-js/: justfile  package.json
railgun-js/src/: main.ts
railgun-js/tests/: sync-utxo.test.ts  transact-poi.test.ts
railgun-rs/: Cargo.toml  justfile
railgun-rs/src/: main.rs
railgun-rs/src/circuit/: proof.rs  prover.rs
railgun-rs/src/crypto/: keys.rs  mod.rs  railgun_txid.rs
railgun-rs/src/railgun/: address.rs  mod.rs  poi_provider.rs  provider.rs
railgun-rs/src/wasm/: bindings.rs  broadcaster.rs  indexer.rs  mod.rs  poi_provider.rs  poi_transaction_builder.rs  prover.rs  provider.rs  shield_builder.rs  transaction.rs  transaction_builder.rs  tx_data.rs
sdk-js/: justfile  log4.txt  log5.txt  log6.txt  main.ts  package.json  tsconfig.json
sdk-js/src/: mod.ts  prover.ts  waku-transport.ts
sdk-js/tests/: transact.test.ts
secrets/: secrets.yaml
tc-js/: justfile  pnpm-lock.yaml  tsconfig.json  witness.json
tc-js/src/: prover-adapter.ts
tc-js/tests/: broadcast.test.ts  transact.test.ts
tc-rs/: Cargo.toml  justfile
tc-rs/src/: lib.rs  pool.rs  pools.rs  provider.rs
tornadocash-sync/: 11155111_ETH_0.1_deposits.ndjson  11155111_ETH_0.1_nullifiers.ndjson  11155111_ETH_10_deposits.ndjson  11155111_ETH_10_nullifiers.ndjson  11155111_ETH_1_deposits.ndjson  11155111_ETH_1_nullifiers.ndjson  137_MATIC_1000_deposits.ndjson  137_MATIC_1000_nullifiers.ndjson  137_MATIC_100_deposits.ndjson  137_MATIC_100_nullifiers.ndjson
(+158 files in other folders)
