[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[features]
wasm = ["common/wasm"]
native = ["ark-groth16"]

[dependencies]
num-bigint = { workspace = true }
ruint = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
common = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
